--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.12.9",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.545.0",
+    "next": "15.5.5",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.5"
+    "recharts": "^3.2.1",
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.5.5",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "15.5.5"
   }
 }
